# python2rust

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
examples/mandleweb/: .gitignore  Makefile  mandleweb.py  pyproject.toml  test_service.py
examples/prime/: .gitignore
examples/prime/python/: .gitignore  Makefile  main.py  pyproject.toml  test_main.py  test_service.py
examples/prime/rust/: cargo.toml
examples/prime/rust/src/: main.rs
src/python2rust/: __init__.py  main.py
src/python2rust/agent/: migration_agent.py  state.py
src/python2rust/builders/: __init__.py  build_result.py  rust_builder.py  server_tester.py
src/python2rust/chains/: __init__.py  analysis_chain.py  fix_chain.py  generation_chain.py  verification_chain.py
src/python2rust/config/: default_specs.json  emissions_config.json  models_config.json  settings.py
src/python2rust/initializers/: __init__.py  chain_initializer.py  codestral_llm.py  llm_initializer.py
src/python2rust/prompts/: __init__.py  analysis_prompts.py  fix_prompts.py  generation_prompts.py  verification_prompts.py
src/python2rust/utils/: build_output.py  code_extractor.py  debug_manager.py  error_formatter.py  logging.py  message_formater.py  trackers.py
src/python2rust/workflows/: __init__.py  build_workflow.py  migration_workflow.py  test_workflow.py
tests/: conftest.py
tests/test_agent/: conftest.py  test_migration_agent.py
tests/test_utils/: test_rust_builder.py  test_server_tester.py
