[tool.poetry]
name = "prime"
version = "0.1.0"
description = ""
authors = ["Olivier <olivier@carbonifer.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
requests = "^2.32.3"


[tool.poetry.group.build.dependencies]
cython = "^3.0.11"
nuitka = "^2.4.11"
numba = "^0.60.0"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
